--- a/src/styles/component/_button.scss
+++ b/src/styles/component/_button.scss
@@ -12,6 +12,8 @@
     cursor: pointer;
 
     &.-inactive {
+        background-color: $light-blue;
+        color: $pale-gray;
         cursor: default;
     }
 }
