--- a/src/styles/component/_button.scss
+++ b/src/styles/component/_button.scss
@@ -1,8 +1,8 @@
 @use '../foundation' as *;
 
 .c-button {
-    height: 30px;
-    width: 100px;
+    height: 50px;
+    width: 200px;
     background-color: $blue;
     color: $white;
     border-radius: 4px;
@@ -10,10 +10,16 @@
     font-size: $fs-small;
     text-align: center;
     cursor: pointer;
+    white-space: pre-wrap;
 
     &.-inactive {
         background-color: $light-blue;
         color: $pale-gray;
         cursor: default;
+    }
+
+    &__img {
+        width: 100%;
+        height: 100%;
     }
 }
