--- a/src/styles/project/game/_game.scss
+++ b/src/styles/project/game/_game.scss
@@ -114,6 +114,13 @@
 
     }
 
+    &__loading {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+    }
+
     &__result-close {
         position: absolute;
         top: 10px;
