--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -3,6 +3,9 @@
 .l-main {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .l-content {}
