--- a/src/styles/project/game/_game.scss
+++ b/src/styles/project/game/_game.scss
@@ -72,6 +72,19 @@
         }
     }
 
+    &__ranking-button {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+
+        @include mq(sp) {
+            width: 30px;
+            height: 30px;
+        }
+    }
+
     &__input {
         width: 200px;
         height: 40px;
