--- a/src/styles/project/game/_ranking.scss
+++ b/src/styles/project/game/_ranking.scss
@@ -6,7 +6,7 @@
     height: 100%;
     background-color: $white;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 
     &__all {
         display: flex;
@@ -22,20 +22,25 @@
         width: 50%;
     }
 
+    &__header {
+        position: relative;
+        height: 30px;
+    }
+
     &__row {
         font-size: $fs-sub-title;
         width: 100%;
         padding: 10px 50px;
+        justify-content: space-between;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
     }
 
     &__container {
-        position: relative;
         width: 100%;
         height: 100%;
-
+        display: flex;
+        flex-direction: row;
     }
 
     &__close-button {
