--- a/src/styles/project/game/_game.scss
+++ b/src/styles/project/game/_game.scss
@@ -132,8 +132,34 @@
         width: 200px;
         height: 30px;
         left: 50%;
-        top: 70%;
+        top: 60%;
         translate: -50% -50%;
+
+        &::placeholder {
+            color: $dark-gray;
+        }
+
+        &:disabled {
+            color: $gray;
+            border: 1px solid $gray;
+
+            &::placeholder {
+                color: $gray;
+            }
+        }
+    }
+
+    &__feedback-input {
+        position: absolute;
+        width: 200px;
+        height: 100px;
+        left: 50%;
+        top: 75%;
+        translate: -50% -50%;
+        border-radius: 5px;
+        border: 1px solid $black;
+        padding: 10px;
+        text-align: left;
 
         &::placeholder {
             color: $dark-gray;
@@ -154,7 +180,7 @@
         width: 200px;
         height: 30px;
         left: 50%;
-        top: 80%;
+        top: 90%;
         translate: -50% -50%;
 
         background-color: transparent;
