--- a/src/styles/project/game/_game.scss
+++ b/src/styles/project/game/_game.scss
@@ -217,14 +217,14 @@
     }
 
     &__select-map-item {
-        font-size: $fs-title;
-        height: 30px;
+        font-size: calc($fs-title * 1.2);
+        height: 5%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
         cursor: pointer;
-        padding: 40px;
+        padding: 6%;
 
 
         &.-selected {
@@ -233,12 +233,12 @@
     }
 
     &__select-map-img {
-        height: 70px;
-        width: 70px;
+        height: auto;
+        width: 13%;
     }
 
     &__select-map-buttons {
-        height: 100px;
+        height: 140px;
         width: 100%;
         display: flex;
         justify-content: space-around;
