min-heightの設定、scrollに対応

--- a/src/styles/project/game/_game.scss
+++ b/src/styles/project/game/_game.scss
@@ -214,11 +214,13 @@
 
     &__select-map-items {
         height: calc(100% - 100px);
+        overflow-y: auto;
     }
 
     &__select-map-item {
         font-size: calc($fs-title * 1.2);
         height: 5%;
+        min-height: 75px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -235,10 +237,11 @@
     &__select-map-img {
         height: auto;
         width: 13%;
+        min-width: 65px;
     }
 
     &__select-map-buttons {
-        height: 140px;
+        height: 100px;
         width: 100%;
         display: flex;
         justify-content: space-around;
