--- a/src/styles/project/game/_game.scss
+++ b/src/styles/project/game/_game.scss
@@ -14,6 +14,13 @@
         left: 0;
     }
 
+    &__version {
+        position: absolute;
+        left: 10px;
+        top: 10px;
+        font-size: $fs-text;
+    }
+
     &__start-button {
         width: 50px;
         height: 50px;
