--- a/src/styles/project/game/_ranking.scss
+++ b/src/styles/project/game/_ranking.scss
@@ -24,8 +24,25 @@
 
     &__header {
         position: relative;
-        height: 30px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
+
+
+    &__version {
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background-color: $white;
+        padding: 10px;
+        width: 20%;
+        font-size: $fs-sub-title;
+        cursor: pointer;
+    }
+
+
 
     &__row {
         font-size: $fs-sub-title;
