--- a/src/styles/project/game/_game.scss
+++ b/src/styles/project/game/_game.scss
@@ -278,4 +278,16 @@
         height: 50px;
     }
 
+    &__timeline-container {
+        height: 50px;
+        width: 100%;
+        text-align: left;
+        overflow-y: scroll;
+        padding: 10px;
+    }
+
+    &__timeline {
+        font-size: $fs-text;
+        white-space: pre-wrap;
+    }
 }
