--- a/src/styles/project/game/components/_policy-icon.scss
+++ b/src/styles/project/game/components/_policy-icon.scss
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
   }
 
   &__img {
@@ -39,5 +40,13 @@
   &.-inactive {
     filter: grayscale(100%);
     transition: 0.2s;
+  }
+
+  &__overlay {
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
   }
 }
