--- a/src/styles/project/game/_ranking.scss
+++ b/src/styles/project/game/_ranking.scss
@@ -58,6 +58,7 @@
         height: 100%;
         display: flex;
         flex-direction: row;
+        justify-content: space-around;
     }
 
     &__close-button {
