--- a/src/styles/project/game/_ranking.scss
+++ b/src/styles/project/game/_ranking.scss
@@ -47,10 +47,20 @@
     &__row {
         font-size: $fs-sub-title;
         width: 100%;
-        padding: 10px 50px;
+        padding: 5px 20px;
         justify-content: space-between;
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__urname {
+        font-size: $fs-text;
+        width: calc(100% - 100px);
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     &__container {
@@ -66,5 +76,10 @@
         top: 10px;
         right: 10px;
         font-size: $fs-text;
+    }
+
+    &__rank-image {
+        width: 40px;
+        height: 40px;
     }
 }
