--- a/src/styles/project/game/_game.scss
+++ b/src/styles/project/game/_game.scss
@@ -28,6 +28,7 @@
         left: 50%;
         top: 92%;
         translate: -50% 0;
+        z-index: 1;
 
         color: $black;
 
@@ -45,6 +46,7 @@
         position: absolute;
         right: 70px;
         top: 10px;
+        z-index: 1;
 
         @include mq(sp) {
             right: 50px;
@@ -59,6 +61,7 @@
         position: absolute;
         right: 10px;
         top: 10px;
+        z-index: 1;
 
         @include mq(sp) {
             width: 30px;
@@ -72,6 +75,7 @@
         position: absolute;
         right: 10px;
         top: 10px;
+        z-index: 1;
 
         @include mq(sp) {
             width: 30px;
@@ -85,6 +89,7 @@
         position: absolute;
         right: 10px;
         top: 10px;
+        z-index: 1;
 
         @include mq(sp) {
             width: 30px;
