--- a/src/styles/project/game/_result.scss
+++ b/src/styles/project/game/_result.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     font-size: $fs-sub-title;
+    z-index: 0;
 
     &__header {
         width: 100%;
