--- a/src/styles/project/game/_result.scss
+++ b/src/styles/project/game/_result.scss
@@ -73,4 +73,49 @@
         text-shadow: $black 0 0 1.5px;
     }
 
+    &__start-button {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        left: 50%;
+        top: 92%;
+        translate: -50% 0;
+
+        color: $black;
+        z-index: 1;
+        font-size: $fs-text;
+
+        @include mq(sp) {
+            width: 30px;
+            height: 30px;
+        }
+    }
+
+    &__ranking-button {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        right: 80px;
+        top: 10px;
+        z-index: 1;
+
+        @include mq(sp) {
+            width: 30px;
+            height: 30px;
+        }
+    }
+
+    &__restart-button {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        z-index: 1;
+
+        @include mq(sp) {
+            width: 30px;
+            height: 30px;
+        }
+    }
 }
