--- a/src/styles/project/game/components/_score-input.scss
+++ b/src/styles/project/game/components/_score-input.scss
@@ -1,6 +1,6 @@
 @use "../../../foundation" as *;
 
-.c-score-input {
+.p-score-input {
     &__result-input {
         position: absolute;
         width: 200px;
