--- a/src/styles/project/game/_ranking.scss
+++ b/src/styles/project/game/_ranking.scss
@@ -76,7 +76,7 @@
         position: absolute;
         top: 10px;
         right: 10px;
-        font-size: $fs-text;
+        font-size: 20px;
     }
 
     &__rank-image {
